[package]
name = "continuation"
description = "Experimental `catch_unwind`-based continuations"
repository = "https://github.com/gefjon/continuation"
readme = "README.md"
version = "0.1.0"
authors = ["Phoebe Goldman <phoebe@goldman-tribe.org>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
